# AI-Interview-Platform

./: docker-compose.yml  readme.md
ai_service/: .gitignore  main.py  pyproject.toml
ai_service/app/: config.py  logger.py  main.py
ai_service/app/managers/: interview_manager.py  socket_manager.py
ai_service/app/routers/: interview.py  resume.py
ai_service/app/services/: __init__.py  aws.py  base_ai.py  database.py  message_broker.py
ai_service/app/services/helpers/: output.py
ai_service/app/services/interviewer/: __init__.py  context.py  main.py  models.py  prompt.py
auth_service/: package-lock.json  package.json
auth_service/prisma/: schema.prisma
email_service/: .gitignore  package-lock.json  package.json
interview_flow_service/: main.py  package-lock.json  pyproject.toml  test.py
interview_flow_service/app/: api.py  config.py  logger.py  main.py
interview_flow_service/app/services/: __init__.py  base_ai.py  base_generator.py
interview_flow_service/app/services/db_service/: __init__.py  main.py
interview_flow_service/app/services/interview_flow/: __init__.py  main.py  models.py  prompt.py
interview_flow_service/app/services/job_question/: __init__.py  main.py  models.py
interview_flow_service/app/services/message_broker/: __init__.py  main.py
interview_flow_service/app/services/resume_parser/: __init__.py  main.py  models.py
interview_flow_service/prisma/: schema.prisma
job_service/: package-lock.json  package.json  tsconfig.json
question_generation/: .gitignore  main.py  pyproject.toml  worker.py
question_generation/app/core/: base_question_generator.py  output.py  prompts.py  types.py
question_generation/app/services/: db.py  question_generator.py
question_generation/app/services/helpers/: output.py  prompts.py
question_generation/tests/: model_testing.py  test_trigger.py
(+25 files in other folders)
