[project]
name = "interview-flow-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.0",
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "loguru>=0.7.3",
    "prisma>=0.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdfium2>=5.1.0",
]
